# pico-squirt

./: .gitignore  CMakeLists.txt  README.md  blink.pio  main.cpp  test.cpp
avr/: .gitignore  Makefile  README.md  adc.cpp  adc.h  buffer.h  clock.cpp  clock.h  main.S  main.cpp  main.hex  spi.cpp  spi.h  twi.cpp  twi.h
avr/lib/gcc/: README.md
avr/lib/gcc/include/: component-version.h
avr/references/: ADC-SPI-CLK.ods
esp-tune/: README.md  esp-tune.ino
esp-tune/data/: index.html
include/: adc_conv.h  avr.h  bilinterp.h  button.h  canbus.h  crc32.h  decoder.h  flash.h  global_state.h  linear_interp.h  serial.h  simulation.h  trigger.h
lib/can2040/: CMakeLists.txt  README.md  can2040.c
lib/can2040/src/: can2040.h
lib/libdivide/: CMakeLists.txt  README.md  libdivide.h
lib/uart-bridge/: CMakeLists.txt  LICENSE.md  uart-bridge.c  uart-bridge.h  usb-descriptors.c
references/: air temp sensor.ods  calc.ods  decoder state machine.drawio  main.py
rust/rust_example/: Cargo.toml  cbindgen.toml
rust/rust_example/src/: lib.rs
src/: adc_conv.cpp  avr.cpp  button.cpp  canbus.cpp  decoder.cpp  flash.cpp  main.cpp  serial.cpp  simulation.cpp
